--- a/register.html
+++ b/register.html
@@ -10,9 +10,8 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <img src="images/logo.png" alt="Taobao Guide Logo">
-                <h1>Taobao Guide</h1>
+            <div class="brand-name">
+                <a href="index.html">Taobao Guide</a>
             </div>
             <nav>
                 <button class="menu-toggle" id="menuToggle">
@@ -26,12 +25,13 @@
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="language-selector">
-                        <select id="languageSelector">
-                            <option value="en">English</option>
-                            <option value="zh">中文</option>
-                            <option value="es">Español</option>
-                            <option value="ru">Русский</option>
-                        </select>
+                        <a href="#" id="languageButton">English <i class="fas fa-chevron-down"></i></a>
+                        <div class="language-dropdown">
+                            <a href="#" data-lang="en">English</a>
+                            <a href="#" data-lang="zh">中文</a>
+                            <a href="#" data-lang="es">Español</a>
+                            <a href="#" data-lang="ru">Русский</a>
+                        </div>
                     </li>
                 </ul>
             </nav>
@@ -196,7 +196,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/logo-small.png" alt="Taobao Guide">
+                    <div class="brand-name">
+                        <a href="index.html">Taobao Guide</a>
+                    </div>
                     <p>Your guide to shopping on Taobao</p>
                 </div>
                 <div class="footer-links">
